--- a/site/index.html
+++ b/site/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello Coursera</h1>
+    <h1>Hello Coursera it's a graet corse</h1>
 </body>
 </html>
