--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -55,7 +55,7 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-lg-10 col-md-8 col-sm-8 ">
-                <section id="chicken">Chicken</section>
+                <p class="chicken">Chicken</section>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Hic dolorum iste eaque reiciendis, minima beatae deleniti, reprehenderit laborum sint delectus natus consequatur tempore officia similique assumenda expedita qui magnam ab?</p>
                 Col1 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolor est nihil reprehenderit exercitationem debitis dicta voluptates minus vitae dolore ex qui nulla quod animi aliquid veniam aliquam, minima, corrupti ratione.
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi provident autem dignissimos expedita dolor nesciunt temporibus odit dolores velit voluptatem nisi exercitationem blanditiis natus, tempore doloremque dolorum a perferendis molestiae!
